--- a/shopping-service.yml
+++ b/shopping-service.yml
@@ -45,6 +45,10 @@ eureka:
 Feign:
   hystrix:
     enabled: true
+  ribbon:
+    enabled: true
+  circuitbreaker:
+    enabled: true
 hystrix:
   dashboard:
     proxy-stream-allow-list: "*"
